@startuml
'https://plantuml.com/class-diagram

class NameSorter {
    getOutput()
    getNames()
}

class file{
    CSV names
}

class App {
    getOutputFile()
    getInputFile()
    getProjectDirectory()
}

object NameList

App *--> file
App *--> NameSorter
NameSorter *--> NameList
NameList o-.-> App
@enduml